[Example] Support model select and merge main.js/camera.js for object detection

--- a/examples/object_detection/camera.html
+++ b/examples/object_detection/camera.html
@@ -45,6 +45,13 @@
         <div class="dropdown-menu dropdown-menu-right preference">
         </div>
       </div>
+      <div class="btn-group">
+        <button id="selectModel" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Setting...
+        </button>
+        <div class="dropdown-menu dropdown-menu-right available-models">
+        </div>
+      </div>
     </nav>
     <div class="container" id="container">
       <div id="progressContainer">
@@ -73,7 +80,7 @@
       </div>
     </div>
     <canvas id="canvas" width=300 height=300></canvas>
-    <script src="../third_party/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="../third_party/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../third_party/stats.min.js"></script>
@@ -85,10 +92,10 @@
     <script src="../util/tflite/TFliteModelImporter.js"></script>
     <script src="../util/decoders/SsdDecoder.js"></script>
     <script src="utils.js"></script>
-    <script src="camera.js"></script>
+    <script src="main.js"></script>
     <script>
       window.onload = function() {
-        main();
+        main('camera');
       }
     </script>
   </body>
