[SR] make canvas size dynamic

--- a/examples/super_resolution/camera.html
+++ b/examples/super_resolution/camera.html
@@ -64,12 +64,12 @@
       <div class="row top-margin">
         <div class="col" align="center">
             <h4> Low Resolution </h4>
-            <canvas id = "inputCanvas" width = "96" height = "96"></canvas>
-            <video id= "video" autoplay playsinline hidden></video>
+            <video hidden id="video" autoplay playsinline></video>
+            <canvas id="inputCanvas" width="96" height="96"></canvas>
         </div>
         <div class="col" align="center">
             <h4> High Resolution </h4>
-            <canvas id = "outputCanvas" width = "384" height = "384"></canvas>
+            <canvas id="outputCanvas" width="384" height="384"></canvas>
         </div>
       </div>
 
