--- a/examples/super_resolution/index.html
+++ b/examples/super_resolution/index.html
@@ -64,11 +64,12 @@
       <div class="row top-margin">
         <div class="col" align="center">
             <h4> Low Resolution </h4>
-            <canvas id = "inputCanvas" width = "96" height = "96"></canvas>
+            <img hidden id="image" crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="./image/image0.png">
+            <canvas id="inputCanvas" width="96" height="96"></canvas>
         </div>
         <div class="col" align="center">
             <h4> High Resolution </h4>
-            <canvas id = "outputCanvas" width = "384" height = "384"></canvas>
+            <canvas id="outputCanvas" width="384" height="384"></canvas>
         </div>
       </div>
 
