1. Separate loadModel from init by Pinzhen
Promise<void> loadModel(object model)
downloads the model and label files, then decode the bytes to a JS object rawModel internally.

Promise<DOMString> init(DOMString backend, DOMString prefer)
converts the rawModel to a WebNN model and returns 'SUCCESS'. Returns 'NOT_LOADED' if the loadModel has not been finished and do nothing.

2. Full partial refresh without page reloading when switching models
3.  Other UI changes

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -149,7 +149,7 @@
         <button type='button' id='xclose' class='xclose dnone' data-dismiss='alert' aria-label='Close'><span
             aria-hidden='true'>&times;</span></button>
         <div id='introdescription' class='mb-1'></div>
-        <a id='introurl' href='' target='_blank' title='Visit paper for this model'></a> <a id='netronurl' href=''
+        <a id='paperurl' href='' target='_blank' title='Visit paper for this model'></a> <a id='netronurl' href=''
           target='_blank' title='View model visualizer via Netron'></a>
       </div>
     </div>
@@ -195,9 +195,19 @@
       <div class='tab-content clearfix' style='display: none;' id='progressmodel'>
         <div class='loading-page'>
           <div class='counter'>
-            <div class='loading'></div>
+            <div class="loading">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
             <h1>0%</h1>
-            <p id='progressstep'>Loading model...</p>
+            <p id='progressstep'>Loading model ...</p>
           </div>
         </div>
       </div>
