--- a/examples/super_resolution/camera.html
+++ b/examples/super_resolution/camera.html
@@ -14,13 +14,21 @@
       .top-margin {
         margin-top:10px;
       }
+      canvas {
+        width: 512px;
+      }
+      @media (max-width: 800px) {
+        canvas {
+          width: 300px;
+        }
+      }
     </style>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
       <span class="navbar-brand mb-0 h1">WebML Super-Resolution Demo</span>
-      <div class="btn-group">
+      <div class="btn-group mr-1">
         <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Setting...
         </button>
@@ -29,21 +37,21 @@
           <button class="dropdown-item disabled" type="button" id="webgl">WebGL</button>
           <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
         </div>
+    </div>
+    <div class="btn-group mr-1 prefer" style="display: none;">
+      <button id="selectPrefer" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Setting...
+      </button>
+      <div class="dropdown-menu dropdown-menu-right preference">
       </div>
-      <div class="btn-group" style="margin-left: 5px;">
-        <button id="selectModel" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Setting...
-        </button>
-        <div class="dropdown-menu dropdown-menu-right available-models">
-        </div>
+  </div>
+    <div class="btn-group">
+      <button id="selectModel" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Setting...
+      </button>
+      <div class="dropdown-menu dropdown-menu-right available-models">
       </div>
-      <div class="btn-group prefer" style="margin-left: 5px; display: none;">
-        <button id="selectPrefer" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Setting...
-        </button>
-        <div class="dropdown-menu dropdown-menu-right preference">
-        </div>
-      </div>
+    </div>
     </nav>
 
     <div class="container" id="container">
