Fix #481 Object Detecion example link broken issue Fix #482 live camera full screen toggle doesn't work issue Fix #483 FPS number UI improvement Fix #487 predictCamera doesn't stop when changing model Add console.error back for exceptions in log Replace function name with ES6 arrow function

--- a/examples/model.html
+++ b/examples/model.html
@@ -61,7 +61,7 @@
           <li class='menu-has-children'><a href='index.html'>Examples</a>
             <ul>
               <li><a href='image_classification/index.html'>Image Classification</a></li>
-              <li><a href='ssd_mobilenet/index.html'>Object Detection</a></li>
+              <li><a href='object_detection/index.html'>Object Detection</a></li>
               <li><a href='posenet/index.html'>Human Pose Estimation</a></li>
               <li><a href='deeplab/index.html'>Semantic Segmentation</a></li>
             </ul>
