[Image Classification] UE improvement - Set model=none by default to reduce unexpected MobileNetV1 loading at first time

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset='utf-8'>
-  <title>WebML API Examples - Image Classfication</title>
+  <title>Web Neural Network API - Examples - Image Classification</title>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-  <meta content='Image Classfication, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, Web Neural Networks API'
+  <meta content='Image Classification, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='keywords'>
-  <meta content='Image Classfication, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, Web Neural Networks API'
+  <meta content='Image Classification, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='description'>
   <link rel='apple-touch-icon' sizes='57x57' href='../static/img/favicon/apple-icon-57x57.png'>
   <link rel='apple-touch-icon' sizes='60x60' href='../static/img/favicon/apple-icon-60x60.png'>
@@ -47,9 +47,9 @@
                 letter-spacing='0' alignment-baseline='before-edge' transform='matrix(1 0 0 1 -286.8825161889153 -158.45741702741705)'
                 style='line-height:100%' xml:space='preserve' dominant-baseline='text-before-edge'>
                 <tspan x='548' dy='0em' alignment-baseline='before-edge' dominant-baseline='text-before-edge'
-                  text-anchor='end'>MACHINE LEARNING</tspan>
+                  text-anchor='end'>Neural Network</tspan>
                 <tspan x='538' dy='1em' alignment-baseline='before-edge' dominant-baseline='text-before-edge'
-                  text-anchor='end'>FOR WEB</tspan>
+                  text-anchor='end'>For Web</tspan>
               </text>
             </defs>
             <g>
@@ -65,7 +65,7 @@
         <ul class='nav-menu'>
           <li class='menu-has-children'><a href='../index.html'>Examples</a>
             <ul>
-              <li><a href='index.html'>Image Classification</a></li>
+              <li><a href='../image_classification/index.html'>Image Classification</a></li>
               <li><a href='../object_detection/index.html'>Object Detection</a></li>
               <li><a href='../posenet/index.html'>Human Pose Estimation</a></li>
               <li><a href='../deeplab/index.html'>Semantic Segmentation</a></li>
@@ -153,7 +153,7 @@
     <div class='container' id='container'>
       <a id='extra' href='#' class='mb-1 mt-3'>
         <h3 class='text-center ex' id='ictitle'>
-          Image Classfication
+          Image Classification
         </h3>
         <span class='fa chevron-up'>
           <svg aria-hidden='true' data-prefix='fas' data-icon='chevron-up' class='svg-inline--fa fa-chevron-up fa-w-14'
