--- a/examples/model.html
+++ b/examples/model.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset='utf-8'>
-  <title>WebML API Examples - Supported Models</title>
+  <title>Web Neural Network API - Supported Models</title>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-  <meta content='Image Classfication, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, Web Neural Networks API'
+  <meta content='WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='keywords'>
-  <meta content='Image Classfication, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, Web Neural Networks API'
+  <meta content='WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='description'>
   <link rel='apple-touch-icon' sizes='57x57' href='static/img/favicon/apple-icon-57x57.png'>
   <link rel='apple-touch-icon' sizes='60x60' href='static/img/favicon/apple-icon-60x60.png'>
@@ -42,9 +42,9 @@
                 font-style='normal' letter-spacing='0' alignment-baseline='before-edge' transform='matrix(1 0 0 1 -286.8825161889153 -158.45741702741705)'
                 style='line-height:100%' xml:space='preserve' dominant-baseline='text-before-edge'>
                 <tspan x='548' dy='0em' alignment-baseline='before-edge' dominant-baseline='text-before-edge'
-                  text-anchor='end'>MACHINE LEARNING</tspan>
+                text-anchor='end'>Neural Network</tspan>
                 <tspan x='538' dy='1em' alignment-baseline='before-edge' dominant-baseline='text-before-edge'
-                  text-anchor='end'>FOR WEB</tspan>
+                  text-anchor='end'>For Web</tspan>
               </text>
             </defs>
             <g>
@@ -75,11 +75,11 @@
   <section class='models' id='models'>
     <div class='container'>
       <h2 class='text-center'>
-          Image Classfication - Supported Models
+          Image Classification - Supported Models
       </h2>
       <div class="table-responsive-sm">
         <table id='modelcv-ic' class='modelcv table table-borderless table-hover'>
-          <caption>Image Classfication - Computer Vision based models</caption>
+          <caption>Image Classification - Computer Vision based models</caption>
           <thead>
             <tr>
               <th scope='col'>Model</th>
