Remove progressbar inner text value and inner html

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -181,7 +181,7 @@
         <div class='mb-2'>
           <div class='progress'>
             <div class='progress-bar' role='progressbar' style='width: 0%;' aria-valuenow='0' aria-valuemin='0'
-              aria-valuemax='100' id='progressBar'>0%</div>
+              aria-valuemax='100' id='progressBar'></div>
           </div>
         </div>
       </div>
@@ -300,7 +300,7 @@
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>WebML</div>
-            <div id='webmlstatus'>Supported</div>
+            <div id='webmlstatus'></div>
           </div>
           <p>&copy;2019 <a href='../index.html'>WebML</a></p>
         </div>
