--- a/examples/object_detection/index.html
+++ b/examples/object_detection/index.html
@@ -14,6 +14,10 @@
         position: absolute;
         z-index: -3;
       }
+      #canvasShow {
+        max-width: 100%;
+        max-height: 513px;
+      }
       .progress-label {
         float: left;
         margin-right: 1em;
@@ -56,26 +60,18 @@
     <div class="container" id="container">
       <div id="progressContainer">
         <div class="row">
-          <div class="col">
-          </div>
-          <div class="col-8" align="center">
+          <div class="col-lg-8 offset-lg-2" align="center">
               <div class="progress-label">Loading Model:</div>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progressBar">0%</div>
               </div>
           </div>
-          <div class="col">
-          </div>
         </div>
       </div>
       <div class="row top-margin">
-        <div class="col">
-        </div>
-        <div class="col-8" align="center">
+        <div class="col-12" align="center">
           <img id="image" crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="./img/image1.jpg">
           <canvas id="canvasShow" width=400 height=400></canvas>
-        </div>
-        <div class="col">
         </div>
       </div>
       <div class="row top-margin">
