[Example] delete integrity and crossorigin for all examples

--- a/examples/deeplab/index.html
+++ b/examples/deeplab/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Segmentation Demo</title>
-    <link rel="stylesheet" href="../third_party/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../third_party/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -145,10 +145,10 @@
       </div>
 
     </div>
-    <script src="../third_party/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../third_party/iro.min.js" integrity="sha384-4wKYljBiUCSo5tJCQfnFKWf8TAHJxejy8pV2PItmsr0CBWu45fsMtEndOsWNynmn" crossorigin="anonymous"></script>
+    <script src="../third_party/jquery-3.3.1.min.js"></script>
+    <script src="../third_party/popper.min.js"></script>
+    <script src="../third_party/bootstrap.min.js"></script>
+    <script src="../third_party/iro.min.js"></script>
     <script src="../../dist/webml-polyfill.js"></script>
     <script src="../util/base.js"></script>
     <script src="../util/tflite/flatbuffers/js/flatbuffers.js"></script>
