--- a/examples/model.html
+++ b/examples/model.html
@@ -100,10 +100,10 @@
       <div class='row'>
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
           <div class='webmlbadge mb-4'>
-            <div class='webml-title'>WebML</div>
+            <div class='webml-title'>WebNN API</div>
             <div id='webmlstatus'>Supported</div>
           </div>
-          <p>&copy;2019 <a href='index.html'>WebML</a></p>
+          <p>&copy;2019 <a href='index.html'>WebNN API</a></p>
         </div>
       </div>
   </footer>
