[example] Fix progressbar issue

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -181,7 +181,7 @@
         <div class='mb-2'>
           <div class='progress'>
             <div class='progress-bar' role='progressbar' style='width: 0%;' aria-valuenow='0' aria-valuemin='0'
-              aria-valuemax='100' id='progressBar'>0%</div>
+              aria-valuemax='100' id='progressBar'></div>
           </div>
         </div>
       </div>
