--- a/examples/posenet/index.html
+++ b/examples/posenet/index.html
@@ -28,11 +28,6 @@
   <meta name='theme-color' content='#ffffff'>
   <link href='../static/lib/bootstrap/css/bootstrap.min.css' rel='stylesheet'>
   <link href='../static/css/style.css' rel='stylesheet'>
-  <style>
-    section {
-      padding: 0px 0;
-    }
-  </style>
 </head>
 
 <body id='posenet'>
@@ -78,7 +73,7 @@
   </header>
 
   <form id='query' action='' method='get' class='container'>
-    <div class='filter mb-3 mt-2'>
+    <div class='filter mb-3'>
       <table id='filter' class='t-filter table table-condensed'>
         <tbody>
           <tr class='backend'>
@@ -102,7 +97,7 @@
               </div>
             </td>
           </tr>
-          <tr>
+          <tr id='option' style='display: none;'>
             <th class='text-center'>Option</th>
             <td>
                 <div id='my-gui-container'></div>
