--- a/examples/model.html
+++ b/examples/model.html
@@ -62,8 +62,8 @@
             <ul>
               <li><a href='image_classification/index.html'>Image Classification</a></li>
               <li><a href='object_detection/index.html'>Object Detection</a></li>
-              <li><a href='posenet/index.html'>Human Pose Estimation</a></li>
-              <li><a href='deeplab/index.html'>Semantic Segmentation</a></li>
+              <li><a href='skeleton_detection/index.html'>Skeleton Detection</a></li>
+              <li><a href='semantic_segmentation/index.html'>Semantic Segmentation</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -73,19 +73,42 @@
   </header>
   <section class='models' id='models'>
     <div class='container'>
-      <h3 class='text-center mb-4 mt-1'>
+      <h2 class='text-center mb-4 mt-1'>
           Supported Models
-      </h3>
+      </h2>
+
       <h4 class='text-center'>
-          Human Pose Estimation
+          Semantic Segmentation
       </h4>
-      <div class="table-responsive-sm">
-        <table id='modelcv-hpe' class='modelcv table table-borderless table-hover'>
-          <caption>Human Pose Estimation - Computer Vision based models</caption>
+      <div class="table-responsive">
+        <table id='modelcv-ss' class='modelcv table table-borderless table-hover'>
+          <caption>Semantic Segmentation - Computer Vision based models</caption>
           <thead>
             <tr>
               <th scope='col'>Model</th>
               <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+
+      <h4 class='text-center'>
+          Skeleton Detection
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-hpe' class='modelcv table table-borderless table-hover'>
+          <caption>Skeleton Detection - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
               <th scope='col'>Paper</th>
               <th scope='col' title='Netron Model Visualizer'>Netron</th>
               <th scope='col'>Description</th>
@@ -99,13 +122,14 @@
       <h4 class='text-center'>
           Image Classification
       </h4>
-      <div class="table-responsive-sm">
+      <div class="table-responsive">
         <table id='modelcv-ic' class='modelcv table table-borderless table-hover'>
           <caption>Image Classification - Computer Vision based models</caption>
           <thead>
             <tr>
               <th scope='col'>Model</th>
               <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
               <th scope='col'>Paper</th>
               <th scope='col' title='Netron Model Visualizer'>Netron</th>
               <th scope='col'>Description</th>
@@ -123,7 +147,11 @@
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>WebNN API</div>
-            <div id='webmlstatus'>Supported</div>
+            <div id='webmlstatus'></div>
+          </div>
+          <div class='webmlbadge mb-4'>
+            <div class='webml-title'>W3C Spec</div>
+            <div class='webml-status-true'><a href='https://webmachinelearning.github.io/webnn/#usecases' title='W3C Web Neural Network API Use Cases'>Use Cases</a></div>
           </div>
           <p>&copy;2019 <a href='index.html'>WebNN API</a></p>
         </div>
@@ -147,66 +175,6 @@
   <script src='../dist/webml-polyfill.js'></script>
   <script src='util/base.js'></script>
   <script src='util/uicommon.js'></script>
-  <script>
-
-    function getModelName(modelname) {
-      return modelname.replace('_tflite', '').replace('_onnx', '').replace('_', ' ').replace('_', ' ');
-    }
-
-    function isTFLite(modelname){
-      return (modelname.toLowerCase().indexOf('_tflite') > -1)? true:false;
-    }
-
-    function isONNX(modelname){
-      return (modelname.toLowerCase().indexOf('_onnx') > -1)? true:false;
-    }
-
-    function showModel(div, modelcategory) {
-      let rowstring, row;
-      for (model of modelcategory) {
-        row = '<tr>';
-        let name = '<td scope=\'col\' class=\'name\'>' + getModelName(model.modelName) + '</td>';
-        row += name;
-  
-        let modeltype;
-        if(isTFLite(model.modelName)) {
-          modeltype = '<td scope=\'col\'>' + 'TFLite' + '';
-        } else if(isONNX(model.modelName)) {
-          modeltype = '<td scope=\'col\'>' + 'ONNX' + '';
-        } else {
-          modeltype = '<td scope=\'col\'></td>';
-        }
-        row += modeltype;
-
-        if (model.paperUrl) {
-          row += `<td scope=\'col\'><a title='View paper' href='${model.paperUrl}'>paper</a></td>`;
-        } else {
-          row += '<td scope=\'col\'></td>';
-        }
-
-        if (model.modelCDNUrl) {
-          row += `<td scope=\'col\'><a title='View visualized model by Netron' href='https://lutzroeder.github.io/netron/?url=${model.modelCDNUrl}'>netron</a></td>`;
-        } else {
-          row += '<td scope=\'col\'></td>';
-        }
-
-        if (model.intro) {
-          row += `<td scope=\'col\' class='des'>${model.intro}</td>`;
-        } else {
-          row += '<td scope=\'col\'></td>';
-        }
-
-        row = row + '</tr>';
-        rowstring += row;
-      }
-      $(div).html(rowstring);
-    }
-
-    $(document).ready(function () {
-      showModel('#modelcv-ic tbody', imageClassificationModels)
-      showModel('#modelcv-hpe tbody', humanPoseEstimationModels)
-    });
-  </script>
-  
+  <script src='static/js/model.js'></script>
 </body>
 </html>
