--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset='utf-8'>
-  <title>Web Neural Network API - Examples - Human Pose Estimation</title>
+  <title>Web Neural Network API - Examples - Skeleton Detection</title>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
   <meta content='Human Pose Estimation, Skeleton Detection, PoseNet, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='keywords'>
@@ -62,8 +62,8 @@
             <ul>
               <li><a href='../image_classification/index.html'>Image Classification</a></li>
               <li><a href='../object_detection/index.html'>Object Detection</a></li>
-              <li><a href='../posenet/index.html'>Human Pose Estimation</a></li>
-              <li><a href='../deeplab/index.html'>Semantic Segmentation</a></li>
+              <li><a href='../skeleton_detection/index.html'>Skeleton Detection</a></li>
+              <li><a href='../semantic_segmentation/index.html'>Semantic Segmentation</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
@@ -112,7 +112,7 @@
     <div class='container' id='container'>
       <a id='extra' href='#' class='mb-1 mt-3'>
         <h3 class='text-center ex' id='ictitle'>
-          Human Pose Estimation
+          Skeleton Detection
         </h3>
         <span class='fa chevron-up'>
           <svg aria-hidden='true' data-prefix='fas' data-icon='chevron-up' class='svg-inline--fa fa-chevron-up fa-w-14'
@@ -238,6 +238,10 @@
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>WebNN API</div>
             <div id='webmlstatus'></div>
+          </div>
+          <div class='webmlbadge mb-4'>
+            <div class='webml-title'>W3C Spec</div>
+            <div class='webml-status-true'><a href='https://webmachinelearning.github.io/webnn/#usecases' title='W3C Web Neural Network API Use Cases'>Use Cases</a></div>
           </div>
           <p>&copy;2019 <a href='../index.html'>WebNN API</a></p>
         </div>
