--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -80,13 +80,37 @@
             <th class='text-center'><a href='../model.html' title='View model details'>Model</a></th>
             <td>
               <img src='../static/img/l-tflite.png' alt='TensorFlow Lite Format' title='TensorFlow Lite Format'>
+              <div class='g'>
+              <span>Deeplab</span>
+              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_224_tflite' value='deeplab_mobilenet_v2_224_tflite'
+                checked>
+              <label id='l-deeplab_mobilenet_v2_224_tflite' class='themodel' for='deeplab_mobilenet_v2_224_tflite'
+                title='Deeplab 224'>224</label>
+              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_224_atrous_tflite' value='deeplab_mobilenet_v2_224_atrous_tflite'>
+              <label id='l-deeplab_mobilenet_v2_224_atrous_tflite' class='themodel' for='deeplab_mobilenet_v2_224_atrous_tflite'
+                title='Deeplab 224 Atrous'>224 Atrous</label>
+              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_257_tflite' value='deeplab_mobilenet_v2_257_tflite'
+                checked>
+              <label id='l-deeplab_mobilenet_v2_257_tflite' class='themodel' for='deeplab_mobilenet_v2_257_tflite'
+                title='Deeplab 257'>257</label>
+              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_257_atrous_tflite' value='deeplab_mobilenet_v2_257_atrous_tflite'>
+              <label id='l-deeplab_mobilenet_v2_257_atrous_tflite' class='themodel' for='deeplab_mobilenet_v2_257_atrous_tflite'
+                title='Deeplab 257 Atrous'>257 Atrous</label>
+              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_321_tflite' value='deeplab_mobilenet_v2_321_tflite'
+                checked>
+              <label id='l-deeplab_mobilenet_v2_321_tflite' class='themodel' for='deeplab_mobilenet_v2_321_tflite'
+                title='Deeplab 321'>321</label>
+              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_321_atrous_tflite' value='deeplab_mobilenet_v2_321_atrous_tflite'>
+              <label id='l-deeplab_mobilenet_v2_321_atrous_tflite' class='themodel' for='deeplab_mobilenet_v2_321_atrous_tflite'
+                title='Deeplab 321 Atrous'>321 Atrous</label>
               <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_513_tflite' value='deeplab_mobilenet_v2_513_tflite'
                 checked>
               <label id='l-deeplab_mobilenet_v2_513_tflite' class='themodel' for='deeplab_mobilenet_v2_513_tflite'
-                title='Deeplab Mobilenet v2 513'>Deeplab 513</label>
-              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_513_dilated_tflite' value='deeplab_mobilenet_v2_513_dilated_tflite'>
-              <label id='l-deeplab_mobilenet_v2_513_dilated_tflite' class='themodel' for='deeplab_mobilenet_v2_513_dilated_tflite'
-                title='Deeplab 513 Atrous'>Deeplab 513 Atrous</label>
+                title='Deeplab 513'>513</label>
+              <input type='radio' class='d-none' name='m' id='deeplab_mobilenet_v2_513_atrous_tflite' value='deeplab_mobilenet_v2_513_atrous_tflite'>
+              <label id='l-deeplab_mobilenet_v2_513_atrous_tflite' class='themodel' for='deeplab_mobilenet_v2_513_atrous_tflite'
+                title='Deeplab 513 Atrous'>513 Atrous</label>
+              </div>
             </td>
           </tr>
           <tr class='backend'>
@@ -180,21 +204,21 @@
 
       <div class='tab-content clearfix row'>
         <div class='icdisplay' style='display: none;'>
-            <div id='fullscreen'>
-                <i class='fa expand'>
-                  <svg aria-hidden='true' data-prefix='fas' data-icon='expand' class='svg-inline--fa fa-expand fa-w-14'
-                    role='img' viewBox='0 0 448 512'>
-                    <path fill='currentColor' d='M0 180V56c0-13.3 10.7-24 24-24h124c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H64v84c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12zM288 44v40c0 6.6 5.4 12 12 12h84v84c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12V56c0-13.3-10.7-24-24-24H300c-6.6 0-12 5.4-12 12zm148 276h-40c-6.6 0-12 5.4-12 12v84h-84c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h124c13.3 0 24-10.7 24-24V332c0-6.6-5.4-12-12-12zM160 468v-40c0-6.6-5.4-12-12-12H64v-84c0-6.6-5.4-12-12-12H12c-6.6 0-12 5.4-12 12v124c0 13.3 10.7 24 24 24h124c6.6 0 12-5.4 12-12z'></path>
-                  </svg>
-                </i>
-                <i class='fa compress' style='display:none;'>
-                  <svg aria-hidden='true' data-prefix='fas' data-icon='compress' class='svg-inline--fa fa-compress fa-w-14'
-                    role='img' viewBox='0 0 448 512'>
-                    <path fill='currentColor' d='M436 192H312c-13.3 0-24-10.7-24-24V44c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm-276-24V44c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v84H12c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h124c13.3 0 24-10.7 24-24zm0 300V344c0-13.3-10.7-24-24-24H12c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h84v84c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-84h84c6.6 0 12-5.4 12-12v-40c0-6.6-5.4-12-12-12H312c-13.3 0-24 10.7-24 24v124c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12z'></path>
-                  </svg>
-                </i>
-            </div>
-            <canvas id='canvasvideo'></canvas>
+          <div id='fullscreen'>
+            <i class='fa expand'>
+              <svg aria-hidden='true' data-prefix='fas' data-icon='expand' class='svg-inline--fa fa-expand fa-w-14'
+                role='img' viewBox='0 0 448 512'>
+                <path fill='currentColor' d='M0 180V56c0-13.3 10.7-24 24-24h124c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H64v84c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12zM288 44v40c0 6.6 5.4 12 12 12h84v84c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12V56c0-13.3-10.7-24-24-24H300c-6.6 0-12 5.4-12 12zm148 276h-40c-6.6 0-12 5.4-12 12v84h-84c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h124c13.3 0 24-10.7 24-24V332c0-6.6-5.4-12-12-12zM160 468v-40c0-6.6-5.4-12-12-12H64v-84c0-6.6-5.4-12-12-12H12c-6.6 0-12 5.4-12 12v124c0 13.3 10.7 24 24 24h124c6.6 0 12-5.4 12-12z'></path>
+              </svg>
+            </i>
+            <i class='fa compress' style='display:none;'>
+              <svg aria-hidden='true' data-prefix='fas' data-icon='compress' class='svg-inline--fa fa-compress fa-w-14'
+                role='img' viewBox='0 0 448 512'>
+                <path fill='currentColor' d='M436 192H312c-13.3 0-24-10.7-24-24V44c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v84h84c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm-276-24V44c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v84H12c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h124c13.3 0 24-10.7 24-24zm0 300V344c0-13.3-10.7-24-24-24H12c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h84v84c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-84h84c6.6 0 12-5.4 12-12v-40c0-6.6-5.4-12-12-12H312c-13.3 0-24 10.7-24 24v124c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12z'></path>
+              </svg>
+            </i>
+          </div>
+          <canvas id='canvasvideo'></canvas>
         </div>
         <div id='inference' class='shoulddisplay col-sm' style='display: none;'>
           <div class='row text-center tc' id='inferencetitle'>
@@ -294,7 +318,8 @@
           </div>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>W3C Spec</div>
-            <div class='webml-status-true'><a href='https://webmachinelearning.github.io/webnn/#usecases' title='W3C Web Neural Network API Use Cases'>Use Cases</a></div>
+            <div class='webml-status-true'><a href='https://webmachinelearning.github.io/webnn/#usecases' title='W3C Web Neural Network API Use Cases'>Use
+                Cases</a></div>
           </div>
           <p>&copy;2019 <a href='../index.html'>WebNN API</a></p>
         </div>
